more minor updates

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                         </div>
                         <div>
                             <ul>
-                                <li><i class="fa fa-check" aria-hidden="true"></i> Worked directly with artists and other programmers to implement efficient and maintainable, modular and reusable UI system </li>
+                                <p> Worked with artists and  programmers to implement well-documented, efficient, modular and reusable UI system and more. </p>
 
                                 <li><i class="fa fa-check" aria-hidden="true"></i> 2D/3D Gameplay programming</li>
 
