--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <div class="banner">
+        <div id="hed" class="banner">
             <h2 class="yellow animated flipInX">Leandro Severino</h2>
             <span class="animated fadeIn">PROGRAMMER / WEB DEVELOPER</span>
         </div>
@@ -49,8 +49,7 @@
             <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
                 <nav>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a class="scroll" href="index.html">Home</a>
-                        </li>
+                        
                         <li><a href="#about" class="scroll">About</a>
                         </li>
                         <li><a href="#skills" class="scroll">Skills</a>
@@ -90,9 +89,9 @@
 
         <!--SKILLS SECION -->
         <div id="skills">
-            <div class="row">
+            <div class="row" style="margin-right: 0">
                 <div class="pie_charts">
-                    <h3>Skills</h3>
+                    <h3>Skills</h3> 
                     <div class="item col-xs-6 col-sm-3 text-center">
                         <div id="demo-pie-1" class="pie-title-center" data-percent="90"> <span class="pie-value"></span> </div>
                         <h4>HTML</h4>
@@ -117,39 +116,14 @@
                 </div>
             </div>
 
-            <div class="row">
-                <!--skills left-side-->
-                <!--<div class="col-xs-12 col-sm-12 col-lg-6 skills-grp">
-                    <h3>Skills</h3>
-                    <div class="col-xs-12 col-sm-6 col-lg-6">
-                        <ul>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Custom Website Design</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Logo and Brochure Design</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Design for Print</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Animations and Graphics</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Mobile websites</li>
-                        </ul>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-lg-6">
-                        <ul>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Template/CMS based websites</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> iOS and Android App</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Repsonsive design</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i> Search Engine Marketing (SEM)</li>
-                        </ul>
-                    </div>
-                </div>			-->
-
+            <div class="row" style="margin-right: 0">
+                
                 <!--skills Right-side-->
                 <div class=" skills-grp padding-bottom" style="text-align: center;">
 
                     <div class="col-xs-12 col-sm-12 col-lg-12 padding-bottom" style="text-align: center;">
 
-                        <!--<h3 class="title title-skills">Professional skills</h3>-->
-
-
-
-                        <!--other skills icons-->
+                         <!--other skills icons-->
                         <div id="dev_icons">
                             <div class="dev_icon">
                                 <svg id="my-svg" viewBox="0 0 128 128">
