--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                         </li>
                         <li><a href="#skills" class="scroll">Skills</a>
                         </li>
+                        <li><a href="#exp" class="scroll">Experience</a>
+                        </li>
                         <li><a href="#portfolio" class="scroll">Works</a>
                         </li>
                         <li><a href="#footer" class="scroll">Contact</a>
