--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <!-- font-awesome icons -->
-<!--    <script src="https://use.fontawesome.com/76a57e8650.js"></script>-->
+    <script src="https://use.fontawesome.com/76a57e8650.js"></script>
 
 
 </head>
