fixed typo mistake

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -147,7 +147,7 @@
                         <div class="exp_item">             
 
                             <div class="exp_item_header">
-                                <p class="period">JAN(2013) - MAR(2013)) </p>
+                                <p class="period">JAN(2013) - MAR(2013) </p>
                                 <h4 class="position">TECHNICAL LEAD</h4>                                
                             </div>
                         
