--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -274,7 +274,7 @@
                 </div>
             </section>
             
-            <p id="endnote"><a target="_blank" href="https://leanseverino1022.github.io/printable_cv/index.html">I created this resume using pure HTML and CSS. Click to view as a web page</a></p>
+<!--            <p id="endnote"><a target="_blank" href="https://leanseverino1022.github.io/printable_cv/index.html">I created this resume using pure HTML and CSS. Click to view as a web page</a></p>-->
             
         </div> <!--end profile_body--> 
     </div>
