--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                         <li><a target="_blank" href="https://drive.google.com/uc?export=download&id=0B22S8zM8uVfuUVdaT0V2bXZmTUU">Download PDF Resume</a>
                         </li>
-                        <li><a href="printable_cv/index.html" class="scroll">View Resume</a>
+                        <li><a href="printable_cv/index.html">View Resume</a>
                         </li>
 
                     </ul>
