--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- //for-mobile-apps -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <!--<link href="css/normalize.css" rel="stylesheet" type="text/css" media="all" />-->
+
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stickyheader.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -18,11 +18,7 @@
     <!-- font-awesome icons -->
     <script src="https://use.fontawesome.com/76a57e8650.js"></script>
     <style>
-        .navbar-nav li:not(:first-child) {
-            border-right: .5px solid rgba(192, 192, 192, .5);
-            border-left: .5px solid rgba(192, 192, 192, .5);
-            /*            border: red 2px solid;*/
-        }
+   
     </style>
 
 </head>
@@ -277,11 +273,11 @@
 
                                         <li><i class="fa fa-check" aria-hidden="true"></i> Fixed a website's responsive design </li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> created web pages based on an image / psd</li>
+                                        <li><i class="fa fa-check" aria-hidden="true"></i> Created web pages based on an image / psd</li>
 
                                         <li><i class="fa fa-check" aria-hidden="true"></i> Worked with students to get their projects done</li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> started building a mobile app</li>
+                                        <li><i class="fa fa-check" aria-hidden="true"></i> Started building a mobile app</li>
 
                                     </ul>
                                 </div>
@@ -341,7 +337,7 @@
                                 <h6>Teleperformance</h6>
                                 <h4>Feb(2014) – Mar(2016)</h4>
                             </div>
-                            <p>This is not a higlight of my career but through this job, I had developed my communication skills and enhanced a lot of my people skills. I learned to like and excel in a job I was not comfortable with at the beginning and the process I had to endure to accomplish my goals has made me a better person / professional.
+                            <p>This is not a higlight of my career but through this job, I had developed my communication skills and enhanced a lot of my people skills. I learned to like and excel in a job I was not comfortable with at the beginning. The process I had to endure to accomplish my goals has made me a better person / professional.
                             </p>
                         </div>
 
@@ -396,7 +392,7 @@
                             </div>
                             <p><strong>Game Title: Feeding Frenzy: A 2D word game</strong>
                             </p>
-                            <p>We developed a game and I provided the team the systems to be used for the development of the game. I was also the resource person for technical and game design issues. I managed to lead the team to finish the project on short notice.</p>
+                            <p>We created a game and I provided the team the systems to be used for the development. I was also the resource person for technical and game design issues. I managed to lead the team to finish the project on short notice.</p>
 
                         </div>
 
@@ -589,3 +585,14 @@
 </body>
 
 </html>
+
+<!--
+TODO
+validate css
+validate html
+autoprefixer
+
+
+
+
+-->
