updated content, styles. New print styles
updated the github image, styles, content, assets
added print styles

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 <h1>Gritty. <span class="yellow">Resourceful. </span> Passionate.</h1>
                 <p>I'm a freelance web developer based in the Philippines </p>
 
-                <p>I specialize in front-end. I'm proficient with HTML/CSS even without a 3rd party library. One of my main goals is to be an elite JavaScript developer. I do a lot of Javascript related projects and have started creating mobile apps. </p>
+                <p>I specialize in front-end. I'm proficient with HTML/CSS/Javascript. I've worked on game and web development projects. I do a lot of Javascript related projects and recently got started in mobile app development. </p>
+                <p>I'm working on my craft every day to be great at what I do.</p> 
 
                 <p>I want to work on new challenging projects and I am currently available for any freelance projects, as well as full time positions as a front-end (or potentially backend) developer. </p>
             </div>
@@ -315,7 +316,7 @@
 
                                         <li><i class="fa fa-check" aria-hidden="true"></i> Created my own css library to build simple print-ready web forms </li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> Trained and did a little of PHP work </li>
+                                        <li><i class="fa fa-check" aria-hidden="true"></i> PHP/MySQL work with training</li>
 
                                     </ul>
                                 </div>
@@ -392,7 +393,7 @@
                             </div>
                             <p><strong>Game Title: Feeding Frenzy: A 2D word game</strong>
                             </p>
-                            <p>We created a game and I provided the team the systems to be used for the development. I was also the resource person for technical and game design issues. I managed to lead the team to finish the project on short notice.</p>
+                            <p>We created a game and I provided our team the systems to be used for the development. I was the resource person for technical and game design issues. I managed to lead the team to finish the project on short notice.</p>
 
                         </div>
 
@@ -413,7 +414,7 @@
                                     <li>Tumbang Preso: A Filipino Game</li>
                                     <li>HistoJump: A 2D Board game</li>
                                     <li>WordWarTech: WordGame</li>
-                                    <li>SignLanguage System (more of a training software for the mute)</li>
+                                    <li>Sign Language System (more of a training software for the mute)</li>
                                 </ol>
                                 <!--							<span>All games made in C++ using a proprietary game engine.</span>-->
                             </div>
@@ -537,8 +538,10 @@
                         </h4>
 
                         <ul class="list-unstyled">
+                            <li><i class="fa fa-map-marker fa-fw"></i><a href="https://www.google.com.ph/maps/place/Silay+City,+Negros+Occidental/data=!4m2!3m1!1s0x33aed61aecc67287:0x420b7cea0efc5e27?sa=X&ved=0ahUKEwjB69ml67XVAhUEgrwKHSicCngQ8gEIjQEwDw">Silay City, Philippines</a></li>
                             <li><i class="fa fa-phone fa-fw"></i> +639054577819</li>
                             <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:yihseverino@gmail.com">yihseverino@gmail.com</a>
+                            <li><i class="fa fa-skype fa-fw"></i>kype ID: headstrong24</li>
                             </li>
                         </ul>
                         <br>
