--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -102,8 +102,7 @@
                                         <li><i class="fa fa-check" aria-hidden="true"></i> Created my own css library to build
                                             simple print-ready web forms</li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i>Worked on Php related tasks while training
-                                            in using the language </li>
+                                        <li><i class="fa fa-check" aria-hidden="true"></i>Worked on Php/MySQL related tasks </li>
 
                                     </ul>
                                 </div>
@@ -128,7 +127,7 @@
                             </div>
                         </div>
 
-                        <div class="exp_item">
+                        <div class="exp_item page-break">
 
                             <div class="exp_item_header">
                                 <p class="period">APR(2012) - JUNE(2013) </p>
@@ -202,14 +201,17 @@
                                         and on track of development schedule</li>
                                     <li><i class="fa fa-check" aria-hidden="true"></i> Conducted C++ tutorial for the project
                                         programmers</li>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Provide simple systems needed for each
-                                        game like a physics behavior projectile system for the Tumbang Preso game</li>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Setting up meetings and deadline schedules</li>
+                                    <li><i class="fa fa-check" aria-hidden="true"></i> Provide the physics behavior projectile system for the Tumbang Preso game</li>
+                                    <li><i class="fa fa-check" aria-hidden="true"></i> Set up meetings and deadline schedules</li>
                                     <li><i class="fa fa-check" aria-hidden="true"></i> Supervised the game play development of
                                         each game.</li>
                                     <li><i class="fa fa-check" aria-hidden="true"></i> Manage all groups simultaneously</li>
                                 </ul>
                             </div>
+                        </div>
+                        
+                        <div>
+                            <p id="endnote"><a target="_blank" href="https://leanseverino1022.github.io/printable_cv/index.html">Click to view resume as a web page</a></p>           
                         </div>
 
                     </div>
@@ -259,7 +261,7 @@
                         <li>Game Development</li>
                     </ul>
 
-                    <p><strong>Soft Skills:</strong> Fast learner, Resourceful, Mentoring, Excellent Team player, Gritty. </p>
+                    <p><b>Soft Skills</b>:  Fast learner, Resourceful, Mentoring, Excellent Team player, Gritty. </p>
                 </div>
 
                 <div class="links_sec">
@@ -295,22 +297,19 @@
                 <!--end of links section-->
 
                 <div class="educ_sec">
-
                     <h3 class="section_title">EDUCATION</h3>
-
                     <p>University of St. La Salle - La Salle Avenue, Bacolod City (2007-2011) </p>
                     <br>
                     <p> Bachelor’s Degree in Computer Science </p>
-
-
                 </div>
             </section>
-
-            <!--            <p id="endnote"><a target="_blank" href="https://leanseverino1022.github.io/printable_cv/index.html">I created this resume using pure HTML and CSS. Click to view as a web page</a></p>-->
-
+            
+            <div>            
+<!--
             <div id="download_cv">
-                <span class="txt"><a target="_blank" href="https://drive.google.com/uc?export=download&id=0B22S8zM8uVfuUVdaT0V2bXZmTUU">DOWNLOAD MY RESUME</a></span>
+                <span class="txt"><a target="_blank" href="https://drive.google.com/uc?export=download&id=0B22S8zM8uVfuUVdaT0V2bXZmTUU">( CLICK TO DOWNLOAD RESUME IN PDF FORMAT )</a></span>
             </div>
+-->
 
         </div>
         <!--end profile_body-->
