updated content, spacing,
updated content, spacing,

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -24,7 +24,7 @@
         <header id="profile_header">
             <div class="banner">
                 <h2>Leandro Severino</h2>
-                <span>WEB DEVELOPER</span>
+                <span>PROGRAMMER/WEB DEVELOPER</span>
             </div>
         </header>
 
