changed portfolio link image to font-awesome

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -234,7 +234,7 @@
                     <h3 class="section_title">LINKS</h3>
                     <ul class="icon_list">
                         <li>
-                            <img src="images/portolio_img.jpg" alt="">
+                            <div><i class="fa fa-user-o" aria-hidden="true"></i></div>
                             <p class="link_name"><a target="_blank" href="https://leanseverino1022.github.io/">Online Portfolio</a></p>
                         </li>
 
