fixed problems when viewed on small devices

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
                 <!--EXP: INDIE DEVELOPER-->
                 <div class="exp_card">
-                    <div class="exp_job_enum">
+                    <div class="exp_job_enum break-word exp_indie">
                         <h4>Independent Game Developer/</h4>
                         <h4>PART TIME TRANSCRIPTIONIST</h4>
                         <div class="exp_job_year_info">
@@ -358,7 +358,8 @@
                             <p><strong>Game Title: Feeding Frenzy: A 2D word game</strong>
                             </p>
                             <p>Created the basic systems to be used for the development. Overseeing overall development progress. Managed to lead the team to finish the project on short notice.</p>
-                            <span>Game engine used: <a href ="http://pulsetec.codeplex.com/"><strong>Pulse-Tec</strong></a></span><br><span>Programming Language: <strong> C++</strong></span>
+                            <br>
+                            <p>Game engine used: <a href ="http://pulsetec.codeplex.com/"><strong>Pulse-Tec</strong></a> | Programming Language: <strong> C++</strong></p>
                         </div>
                     </div>
 
@@ -372,19 +373,19 @@
                                 <h6>4 Computer Science Thesis projects</h6>
                                 <h4>Aug(2011)-Feb(2012)</h4>
                             </div>
-                            <div style="text-align: left; line-height: 1.5;">
+                            <div>
                                 <p style="font-size: 1.2em">Game Titles:</p>
-                                <ol>
+                                <ol style="padding-left: 10%">
                                     <li>Tumbang Preso: A Filipino Game</li>
                                     <li>HistoJump: A 2D Board game</li>
                                     <li>WordWarTech: WordGame</li>
                                     <li>Sign Language System (more of a training software for the mute)</li>
                                 </ol>
                                 
-                                <span>All games were made in C++ using <a href ="http://pulsetec.codeplex.com/">Pulse-Tec</a> game engine</span>
+                                <p>All games were made in C++ using <a href ="http://pulsetec.codeplex.com/">Pulse-Tec</a> game engine</p><br>
                             </div>
 
-                            <div style="text-align: left; line-height: 1.5;">
+                            <div style="text-align: left; line-height: 1.5; padding-left: 10px;">
                                 <p style="font-size: 1.2em">Responsibilities:</p>
                                 <ul>
                                     <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Made sure each team's project are on time and on track of development schedule</li>
