--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -211,11 +211,10 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript</li>
-                        <li>Jquery</li>
-                        <li>Wordpress</li>
-                        <li>AngularJS</li>
-                        <li>Typescript</li>
-                        <li>Ionic</li>
+                        <li>Jquery</li>                        
+                        <li>Knockout.js</li> 
+                        <li>D3.js</li>
+                        <li>Wordpress</li>  
                         <li>MySQL</li>
                         <li>Php</li>
 
