--- a/index.html
+++ b/index.html
@@ -302,11 +302,12 @@
         <!-- Portfolio Gallery -->
         <!--NOTE: For now, comment ut    -->
         <div id="portfolio" class="bg-white">
-            <div class="container-fluid text-center">
+            <div class="container text-center">
                 <h3>WORKS</h3>              
-                <p style="margin-top: .8em">You may check some of my works below or you could check out my Github account</p>          
+                <p style="margin-top: .8em">You may check some of my works below or you could check out my Github account!</p>          
    
-                <div class="portfolio_grid row">                   
+                <div class="portfolio_grid row">       
+                        <div class="col-xs-12 col-sm-6 col-md-4"><div class="github-card shadow animated fadeInUp" style="visibility: visible;"><div class="card-image"><img alt="github-ss" src="images/gallery/people-finder-react.png"></div><div class="card-content"><span class="card-title">Friend Finder</span><p>some text here</p></div></div></div>            
                     <!-- Generated Gallery by JS  -->
                 </div>
             </div>
@@ -369,6 +370,8 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/works-data.js"></script>   
     <script src="js/app.js"></script>
+  
+ 
 
 </body>
 
