remove nav buttons - target source are outdated

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                         <li><a href="#footer" class="scroll">Contact</a>
                         </li>
 
-                        <li><a target="_blank" href="https://drive.google.com/uc?export=download&id=0B22S8zM8uVfuUVdaT0V2bXZmTUU">Download PDF Resume</a>
+                        <!-- <li><a target="_blank" href="https://drive.google.com/uc?export=download&id=0B22S8zM8uVfuUVdaT0V2bXZmTUU">Download PDF Resume</a>
                         </li>
                         <li><a href="printable_cv/index.html">View Resume</a>
-                        </li>
+                        </li> -->
 
                     </ul>
 
