--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -53,9 +53,11 @@
 
                                 <div style="padding-left: 10px;">
                                     <ul>
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Worked with different individuals and companies(PLASS Management Solutions, Systema Solutions).</li>
+                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Worked with different individuals and companies(Resultmaps, Everthread, PLASS Management Solutions, Systema Solutions).</li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Created web pages based on images / psd files. </li>
+                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Create simple libraries for our team</li>
+
+                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Created components using plain Javascript for frequently used App features. </li>
 
                                         <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Fixed an existing website's faulty responsive design. </li>
 
@@ -65,11 +67,7 @@
 
                                         <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Created responsive web pages for client's needs(with and without a framework).</li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Mainly tasked to do bulk of the front-end jobs / Front-end expert(Not an expert in aesthetics though). </li>
-
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Created my own css library to build simple print-ready web forms. </li>
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Got started building a mobile app.</li>
-
+                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Mainly tasked to do bulk of the front-end jobs / Front-end expert(Not an expert in aesthetics though). </li>           
                                     </ul>
                                 </div>
                             </div>
@@ -214,10 +212,8 @@
                         <li>Jquery</li>                        
                         <li>Knockout.js</li> 
                         <li>D3.js</li>
-                        <li>Wordpress</li>  
-                        <li>MySQL</li>
-                        <li>Php</li>
-
+                        <li>Vue.js</li>  
+                        <li>Design patterns</li>                 
                     </ul>
                     <p> Past working experience in: </p>
                     <ul class="skills">
