update list style

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -53,21 +53,21 @@
 
                                 <div style="padding-left: 10px;">
                                     <ul>
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Worked with different individuals and companies(Resultmaps, Everthread, PLASS Management Solutions, Systema Solutions).</li>
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Worked with different individuals and companies(Resultmaps, Everthread, PLASS Management Solutions, Systema Solutions).</li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Create simple libraries for our team</li>
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Create simple libraries for our team</li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Created components using plain Javascript for frequently used App features. </li>
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Created components using plain Javascript for frequently used App features. </li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Fixed an existing website's faulty responsive design. </li>
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Fixed an existing website's faulty responsive design. </li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Contributed to the development of accounting softwares( more on HTML, CSS, JS and a little of Php, MySQL ). </li>
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Contributed to the development of accounting softwares( more on HTML, CSS, JS and a little of Php, MySQL ). </li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Created components using plain Javascript for frequently used features. </li>
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Created components using plain Javascript for frequently used features. </li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Created responsive web pages for client's needs(with and without a framework).</li>
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Created responsive web pages for client's needs(with and without a framework).</li>
 
-                                        <li class="hanging_indents"><i class="fa fa-check" aria-hidden="true"></i> Mainly tasked to do bulk of the front-end jobs / Front-end expert(Not an expert in aesthetics though). </li>           
+                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Mainly tasked to do bulk of the front-end jobs / Front-end expert(Not an expert in aesthetics though). </li>           
                                     </ul>
                                 </div>
                             </div>
@@ -131,15 +131,15 @@
 
                                 <div style="padding-left: 10px;">
                                     <ul>
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> 2D/3D Gameplay programming </li>
+                                        <li><i class="" aria-hidden="true"></i> 2D/3D Gameplay programming </li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> System enhancements </li>
+                                        <li><i class="" aria-hidden="true"></i> System enhancements </li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> Did a fair bit of important work fixing the game engine</li>
+                                        <li><i class="" aria-hidden="true"></i> Did a fair bit of important work fixing the game engine</li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> Client-side programming</li>
+                                        <li><i class="" aria-hidden="true"></i> Client-side programming</li>
 
-                                        <li><i class="fa fa-check" aria-hidden="true"></i> Fix bugs and performed QA on the code of co-programmers</li>
+                                        <li><i class="" aria-hidden="true"></i> Fix bugs and performed QA on the code of co-programmers</li>
 
                                     </ul>
                                 </div>
@@ -167,12 +167,12 @@
                                 <p>Responsibilities:</p>
 
                                 <ul>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Made sure each team's project are on time and on track of development schedule</li>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Conducted C++ and Game engine usage tutorials </li>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Provided the physics behavior projectile system for the Tumbang Preso game</li>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Set up meetings and deadline schedule</li>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Supervised the game play development of each game.</li>
-                                    <li><i class="fa fa-check" aria-hidden="true"></i> Managed all groups simultaneously</li>
+                                    <li><i class="" aria-hidden="true"></i> Made sure each team's project are on time and on track of development schedule</li>
+                                    <li><i class="" aria-hidden="true"></i> Conducted C++ and Game engine usage tutorials </li>
+                                    <li><i class="" aria-hidden="true"></i> Provided the physics behavior projectile system for the Tumbang Preso game</li>
+                                    <li><i class="" aria-hidden="true"></i> Set up meetings and deadline schedule</li>
+                                    <li><i class="" aria-hidden="true"></i> Supervised the game play development of each game.</li>
+                                    <li><i class="" aria-hidden="true"></i> Managed all groups simultaneously</li>
                                 </ul>
                                 <p class="text-center">All 4 groups passed. 2 games were nominated for best thesis project</p>
                                 <p>All games were made in C++ using <a href "http://pulsetec.codeplex.com/">Pulse-Tec</a> game engine</p> 
