--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 </head>
 
-<body>
+<body class="hidden">
     <header>
-        <div id="hed" class="banner hidden">
+        <div id="hed" class="banner">
             <h2 class="text-yellow animated flipInX">Leandro Severino</h2>
             <span class="animated fadeIn">WEB DEVELOPER</span>            
         </div>
