hide resume download lonk

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -234,7 +234,7 @@
                             </div>
                         </div>
 
-                        <div class="exp-item">
+                        <div class="exp-item hidden">
 
                             <div class="exp-item-header">
                                 <p class="period">NOV(2016) - PRESENT </p>
@@ -243,7 +243,7 @@
 
                             </div>
 
-                            <div class="exp-item_body">
+                            <div class="exp-item_body ">
                                 <p>As a freelance Web Developer, here are the things that I have done:</p>
 
                                 <div style="padding-left: 10px;">
