--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -349,9 +349,9 @@
 
 
             <div>
-                <div id="download_cv">
+                <!-- <div id="download_cv">
                     <span class="txt"><a target="_blank" href="https://drive.google.com/uc?export=download&id=0B22S8zM8uVfuUVdaT0V2bXZmTUU">( CLICK TO DOWNLOAD RESUME IN PDF FORMAT )</a></span>
-                </div>
+                </div> -->
 
             </div>
             <!--end profile_body-->
