--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -40,10 +40,10 @@
             </div>
         </header>
 
-        <div id="profile_body" class="cf">
+        <main class="main-content clearfix">
 
 
-            <section class="sec left">
+            <section class="main-col left">
 
                 <div class="profile">
                     <h3 class="section-title">PROFILE</h3>
@@ -109,8 +109,7 @@
             </section>
 
 
-
-            <section class="sec right">
+            <section class="main-col right">
 
                 <div class="exp_sec">
 
@@ -134,12 +133,12 @@
                                     Contracted by previous employer to help enhance an award-winning New Lens App developed using Ionic. </p>
 
                                 <ul>
-                                    Develop responsive web application UIs using HTML5, CSS, and Javascript
+                                    
                                    <!-- <li>Quickly determined and learned the essential skills and technologies to make an immediate, significant impact on the development of the App. We met the deadline.</li> -->
-                                    <li>Translated Figma designs to actual code - produced user interfaces that creates a consistent, yet tailored, cross-platform experience.</li>
+                                    <li>Translated Figma designs to actual code to produce user interfaces that create a consistent, yet tailored, cross-platform experience.</li>
                                     <!-- <li>Translate Figma designs to actual code that will produce visual elements of the application.</li> -->
                                     <li>Tasked to refactor CSS for maintainability. That includes communicating on a daily basis with developers and designers to get information about the current state of the application. </li>
-                                    <li>Developed user interface components around our chatbot platform. You will ensure that these components and the overall application are robust and easy to maintainDeveloped highly reusable, maintainable code components</li>
+                                    <li>Developed user interface components and ensured that these components and the overall application are robust and easy to maintain.</li>
                                     <!-- <li>Quickly learn new technologies to meet requirements and deadlines.</li> -->
                                     <!-- <li>Techologies used: Typescript, Ionic, Javascript, Sass. </li> -->
 
@@ -158,7 +157,7 @@
 
                             <div class="exp-item_body">
                                 <p style="margin: 8px 0">
-                                    Worked directly with the founder, Tycho Maarschall to help further develop his ideas. Enhanced the company's website and to fulfill the needs of the clients. Aside from working on the company website, have worked on 3 client projects. Enhanced developer and user experience by developing maintainable codebase, and adding features which allow users to create content in a more visual way</p>
+                                    Worked directly with the founder, Tycho Maarschall. to help further develop his ideas. Enhanced the company's website and to fulfill the needs of the clients. Aside from working on the company website, have worked on 3 client projects. Enhanced developer and user experience by developing maintainable codebase, and adding features which allow users to create content in a more visual way</p>
 
                             </div>
                         </div>
