clean up naming

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -49,7 +49,7 @@
                     <h3 class="section-title">PROFILE</h3>
 
 
-                    <div id="profile_data">
+                    <div id="profile-data">
                         <p>Front-end web developer with 7 years of professional experience in web design and development across diverse industries. 7 years of experience working in cross-functional, culturally diverse teams.  Specializes in JavaScript and CSS, as well as strong skills in writing clean and efficient code. With strong fundamentals and willingness to learn, has helped companies to focus on looking forward with their ideas instead of simply focusing on a specific, current technology. Shares commitment and passion for team growth.
                     </div>
                 </div>
