--- a/printable_cv/index_2.html
+++ b/printable_cv/index_2.html
@@ -194,7 +194,7 @@
                         <img src="images/Mee.jpg" alt="Photo of Leandro Severino Jr." class="profile-image" id="p2">
                     </div>
 
-                    <div id="profile_data">
+                    <div id="profile-data">
                         <div> <span class="th">Name:</span><span class="td">Leandro Severino Jr. </span> </div>
                         <div> <span class="th">Address:</span><span class="td">Silay City, Philippines</span></div>
                         <div> <span class="th">Phone:</span><span class="td">+639054577819</span> </div>
@@ -225,7 +225,7 @@
                     <p><b>Soft Skills</b>: Fast learner, Resourceful, Mentoring, Excellent Team player, Gritty. </p>
                 </div>
 
-                <div class="links_sec">
+                <div class="links-sec">
                     <h3 class="section_title">LINKS</h3>
                     <ul class="icon_list">
                         <li>
